--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
-avigation-top, .menu {
+.custom-header {
+	height: 319px;
+	width: 100%;
+}
+navigation-top, .menu {
 	background-color: #DEA293;
 }
-
 /*
 @media all and (min-width:1000px) {
 	.custom-header-media {
