--- a/style.css
+++ b/style.css
@@ -6,6 +6,6 @@ navigation-top, .menu {
 	background-color: #DEA293;
 }
 .entry-content a {
-	-webkit-box-shadow: none;
-	box-shadow: none;
+	-webkit-box-shadow: none !important;
+	box-shadow: none !important;
 }
