--- a/style.css
+++ b/style.css
@@ -10,5 +10,5 @@ navigation-top, .menu {
 	box-shadow: none !important;
 }
 navigation-top, .menu {
-    background-color: none !important;
+    background-color: #fff !important;
 }
