--- a/style.css
+++ b/style.css
@@ -1,6 +1,14 @@
-.custom-header {
+/*.custom-header {
 	height: 319px;
 	width: 100%;
+}*/
+#wp-custom-header {
+    background-image: url(https://2017.capetown.wordcamp.org/files/2017/06/Header-Image.jpg);
+    width: 100%;
+    height: 100%;
+}
+#wp-custom-header img {
+    display:none;	
 }
 navigation-top, .menu {
 	background-color: #DEA293;
