Adding custom header image to posts

--- a/style.css
+++ b/style.css
@@ -1,28 +1,35 @@
+/**
+Custom CSS for WordCamp Cape Town 2017
+ */
 .custom-header {
 	height: 319px;
 	width: 100%;
 }
-/*
-#wp-custom-header {
-    background-image: url(https://2017.capetown.wordcamp.org/files/2017/06/Header-Image.jpg);
-    width: 100%;
-    height: 100%;
+
+.post-template-default #wp-custom-header {
+	background-image: url(https://2017.capetown.wordcamp.org/files/2017/06/Header-Image.jpg);
+	width: 100%;
+	height: 100%;
 }
-#wp-custom-header img {
-    display:none;	
+
+.post-template-default #wp-custom-header img {
+	display: none;
 }
-*/
+
 navigation-top, .menu {
 	background-color: #DEA293;
 }
+
 #tix-attendees a {
 	-webkit-box-shadow: none;
 	box-shadow: none;
 }
+
 navigation-top, .menu {
-    background-color: #fff;
+	background-color: #fff;
 }
+
 .single-featured-image-header {
 	max-width: 1000px;
-        margin: 0 auto;
+	margin: 0 auto;
 }
