--- a/style.css
+++ b/style.css
@@ -1,17 +1,19 @@
 /**
-Custom CSS for WordCamp Cape Town 2017
+Custom CSS for WordCamp Cape Town
  */
 .custom-header {
 	height: 319px;
 	width: 100%;
 }
 
+.page-template-default #wp-custom-header,
 .post-template-default #wp-custom-header {
 	background-image: url(https://2017.capetown.wordcamp.org/files/2017/06/Header-Image.jpg);
 	width: 100%;
 	height: 100%;
 }
 
+.page-template-default #wp-custom-header img,
 .post-template-default #wp-custom-header img {
 	display: none;
 }
