--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ Custom CSS for WordCamp Cape Town
 	background-image: url(https://2017.capetown.wordcamp.org/files/2017/06/Header-Image.jpg);
 	width: 100%;
 	height: 100%;
+	background-position: 50% 50%;
 }
 
 .page-template-default #wp-custom-header img,
