--- a/style.css
+++ b/style.css
@@ -46,21 +46,24 @@ navigation-top, .menu {
 	font-weight: bold;
 	font-size: 1.2em;
 	text-transform: uppercase;
-	border-radius: 300px;
+	-webkit-border-radius: 2px;
+    	border-radius: 2px;
 }
 
 #book-button:hover {
-	background: hsl( 25, 50%, 46% );
+    background: hsl( 25, 50%, 46% );
+    -webkit-border-radius: 2px;
+    border-radius: 2px;
 }
 
 .menu-item-582 {
-  background: hsl( 25, 50%, 13% );
+    background: hsl( 25, 50%, 13% );
 }
 
 .menu-item-582 a {
-  color: #fff !important; 
+    color: #fff !important; 
 }
 
 .menu-item-582:hover {
-	background: hsl( 25, 50%, 46% );
+    background: hsl( 25, 50%, 46% );
 }
